## Project requirements (PEP 518, https://python-poetry.org/).


[build-system]
build-backend = "poetry.core.masonry.api"
requires = ["poetry-core>=1.0.0"]


[tool.black]
line-length = 80
target-version = ["py36", "py37", "py38", "py39", "py310", "py311"]


[tool.isort]
line_length = 80
profile = "black"


[tool.mypy]
explicit_package_bases = true
namespace_packages = true

check_untyped_defs = true
strict_optional = true
no_implicit_optional = true

warn_no_return = true
warn_redundant_casts = true
warn_return_any = true
warn_unreachable = true
warn_unused_ignores = true

color_output = false
pretty = true
show_error_codes = true

incremental = true
sqlite_cache = true


[tool.poetry]
name = "radosgw_admin_client"
version = "0.1.0"
description = "Python client for the Rados Gateway Admin Operations API"
license = "Apache-2.0"
authors = ["Brian Aydemir <baydemir@morgridge.org>"]
repository = "https://github.com/HTPhenotyping/radosgw_admin_client"
packages = [{ include = "htpheno" }]


[tool.poetry.dependencies]
python = ">=3.6.8,<3.12"
humanize = "~3.14"
radosgw-admin = "~1.7"


[tool.poetry.dev-dependencies]
bandit = "~1.7"
black = "~22.8"
docutils = "~0.18"
isort = "~5.10"
mypy = "~0.971"
pre-commit = "~2.17"
pylint = "~2.13"
"ruamel.yaml.cmd" = "~0.6"
safety = "~2.3"


[tool.poetry.scripts]
radosgw-admin-client = "htpheno.radosgw_admin_client:entrypoint"


[tool.pylint.messages-control]
max-line-length = 80
disable = "invalid-name,missing-class-docstring,missing-function-docstring"
