## Project requirements (PEP 518, https://python-poetry.org/).


[build-system]
build-backend = "poetry.core.masonry.api"
requires = ["poetry-core>=1.0.0"]


[tool.black]
line-length = 96
target-version = ["py39", "py310", "py311", "py312"]


[tool.isort]
line_length = 96
profile = "black"


[tool.mypy]
explicit_package_bases = true
namespace_packages = true

check_untyped_defs = true
strict_optional = true
no_implicit_optional = true

warn_no_return = true
warn_redundant_casts = true
warn_return_any = true
warn_unreachable = true
warn_unused_ignores = true

color_output = false
pretty = true
show_error_codes = true

incremental = true
sqlite_cache = true


[tool.poetry]
name = "radosgw_admin_client"
version = "0.8.2"
description = "Client for the Ceph Object Gateway Admin Operations API"
license = "Apache-2.0"
authors = [
    "Brian Aydemir <baydemir@morgridge.org>",
]
repository = "https://github.com/HTPhenotyping/radosgw_admin_client"
packages = [{ include = "htpheno" }]


[tool.poetry.dependencies]
python = ">=3.9,<3.12"
humanize = "~4.11"
radosgw-admin = "~1.7"


[tool.poetry.group.dev.dependencies]
bandit = "~1.7"
black = "~24.10"
isort = "~5.13"
markdown = "~3.7"
mypy = "~1.12"
pre-commit = "~4.0"
pylint = "~3.3"


[tool.poetry.scripts]
radosgw-admin-client = "htpheno.radosgw_admin_client:entrypoint"


[tool.pylint.messages-control]
max-line-length = 96
disable = "invalid-name,missing-class-docstring,missing-function-docstring"
